# swarmpy

./: .gitignore  auth.html  client.html  index.html  objects.html  requirements.txt  setup.cfg  swarm.py  utils.html
examples/: connect-stats.py  find-vlan-intfs.py  recent-vlan-changes.py
src/swarm/: __init__.py  client.py  objects.py  utils.py
swarm/: auth.py  client.py
