[metadata]
# replace with your username:
name = swarm
version = 1.0.0
author = Alex Wilson
author_email = alex@uq.edu.au
description = Python client for the swarm API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eait-itig/swarmpy
project_urls =
    Bug Tracker = https://github.com/eait-itig/swarmpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    cachetools
    websocket-client
    typing_extensions; python_version<'3.8'

[options.packages.find]
where = src
